Prevent wrapping, see bug 1155512

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -63,6 +63,7 @@
 
     #lang_links_container {
         float: right;
+        white-space: nowrap;
     }
 
     #lang_links_container .links {
